# LostSword_AutoScript

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEV.md  DEV_ENV.md  INSTALLATION.md  README.md  SECURITY.md  deploy-for-users.bat  pyproject.toml  start-server-simple.bat  start-server.bat  user-start-server.bat
.cursor/commands/: docs.md
CHANGELOG/: 0.0.0-2025-12-02.md  0.0.0-2025-12-05.md  0.0.1.md  0.0.2.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  README.md
UI/: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json
UI/src/: index.html
UI/src/js/api/: api.js  logapi.js  nodeapi.js  screenshot-api.js  scriptapi.js  user-settings-api.js
UI/src/js/components/: connection.js  minimap.js  node-condition.js  node-loop.js  node-start.js  node-wait.js  node.js  sidebar.js
UI/src/js/components/connection/: connection-coordinates.js  connection-events.js  connection-svg.js  connection-utils.js  connection.js
UI/src/js/components/node/: node-action.js  node-canvas.js  node-condition.js  node-connection-handler.js  node-drag.js  node-end.js  node-example.js  node-excel-close.js  node-excel-open.js  node-excel-select-sheet.js  node-file-read.js  node-file-write.js  (+12 more)
UI/src/js/utils/: i18n.js  logger.js  modal.js  result-modal.js  theme-manager.js  toast.js
UI/src/pages/workflow/: README.md  dashboard.js  history.js  page-router.js  settings.css  settings.js  workflow.css  workflow.html  workflow.js
UI/src/styles/: common.css
UI/src/styles/components/: header.css  loading-overlay.css  modal.css  node-settings-modal.css  node.css  result-modal.css  sidebar.css  top-profile.css
docs/: database-schema-comparison.md  database.md  node-definition-flow.md  node.md
docs/db/: README.md  connection.md  database-schema-comparison.md  node_execution_logs.md  repositories.md  schema-v1.md  schema-v2.md  schema.md
docs/dev/: README.md  api-reference.md  architecture.md  creating-nodes-javascript.md  creating-nodes-python.md  creating-nodes.md  custom-node-system-design.md  dashboard.md  development.md  environment.md  execution-log-flow.md  input-output-ux.md  linting.md  node-execution-flow.md  node-output-standard.md  node.md  project-structure.md  webhook-node-implementation.md  workflow-structure.md
docs/dev/nodes/: category-based-wrapper-design.md  creating-nodes-python.md  creating-nodes.md  current-wrapper-usage.md  parameter-choices-guide.md  previous-output-variables-guide.md  why-execute-method.md  wrapper-system-design.md
docs/dev/settings/: adding-languages.md  i18n.md  screenshot.md
docs/dev/todo/: 01-authentication.md  02-excel-control.md  03-script-sharing.md  04-execution-logs.md  05-execution-reports.md  06-settings-features.md  07-tag-notes.md  README.md
docs/dev/ui-ux/: dashboard.md  input-output-preview.md  input-output-ux.md
docs/excel/: README.md  excel-control-capabilities.md  excel-keyword-search-design.md
docs/lint/: github-desktop-hooks.md  javascript-linting.md  python-linting.md
docs/nodes/: README.md  action-nodes.md  architecture.md  boundary-nodes.md  condition-nodes.md  excel-nodes.md  image-nodes.md  logic-nodes.md  wait-nodes.md
docs/performance/: README.md  backend-optimization.md  coordinate-calculation-optimization.md  database-optimization.md  frontend-optimization.md
docs/security/: README.md  fixes.md
docs/temp/: linting-fixes-summary.md
docs/개선내역/: README.md  UTF-8-BOM-문제-해결.md  로그-시스템-개선.md  파일명-충돌-해결.md  환경-변수-중앙-관리-시스템.md
docs/개선내역/UI-UX/: README.md  노드-기반-워크플로우-편집기.md  다국어-지원-시스템.md  모달-및-알림-시스템.md  반응형-디자인.md  사이드바-설계.md  헤더-액션-버튼-설계.md
scripts/: create-node.py  delete-node.py  find-venv-python.bat  lint-all.bat  validate-nodes.py
scripts/linting/: lint-js.py  lint.ps1  lint.py  lint.sh
server/: config.py  database.py  env.example  main.py  requirements-dev.txt  requirements.txt  seed_nodes.py  server_config.py  workflows.db
server/api/: API_RESPONSE_IMPROVEMENT.md  __init__.py  action_node_router.py  action_router.py  config_router.py  dashboard_router.py  game_router.py  log_router.py  node_router.py  response_helpers.py  router_wrapper.py  screenshot_router.py  script_router.py  state_router.py
server/automation/: __init__.py  application_state.py  input_handler.py  screen_capture.py  workflow_engine.py
server/config/: __init__.py  action_node_types.py  nodes_config.py  server_config.py
server/db/: README.md  __init__.py  connection.py  dashboard_stats_repository.py  database.py  insert_sample_nodes.sql  log_stats_repository.py  node_execution_log_repository.py  node_repository.py  nodes_with_connections.sql  remove_logs_table.sql  script_repository.py  table_manager.py  update_nodes_with_connections.sql  user_settings_repository.py  workflows.db
server/game_automation/: __init__.py  game_state.py  input_handler.py  screen_capture.py  workflow_engine.py
server/log/: __init__.py  log_manager.py
server/models/: __init__.py  action_models.py  folder_path_models.py  http_api_request_models.py  log_models.py  process_focus_models.py  response_models.py  script_models.py
server/nodes/: __init__.py  base_node.py  node_executor_wrapper.py
server/nodes/actionnodes/: __init__.py  action.py  battle.py  click.py  collect.py  http_api_request.py  move.py  navigate.py  process_focus.py
server/nodes/boundarynodes/: __init__.py  end.py  start.py
server/nodes/conditionnodes/: __init__.py  condition.py
server/nodes/excelnodes/: __init__.py  excel_close.py  excel_manager.py  excel_open.py  excel_select_sheet.py
server/nodes/imagenodes/: __init__.py  image_touch.py
server/nodes/logicnodes/: __init__.py  repeat.py
server/nodes/processnodes/: __init__.py
server/nodes/waitnodes/: __init__.py  wait.py
server/services/: __init__.py  action_service.py  condition_service.py  expression_parser.py  node_execution_context.py
server/utils/: __init__.py  execution_id_generator.py  field_path_resolver.py  log_client.py  parameter_validator.py  result_formatter.py  time_utils.py
server/workflow/: __init__.py  workflow_engine.py
(+49 files in other folders)
